--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,4 +1,4 @@
-<%= @doctor.name %><br>
+<h1>Doctor: <%= @doctor.name %><br>
 <%= @doctor.department %><br>
 <% @doctor.appointments.each do |appt| %>
   <%= appt.datetime %>
