Automatically backed up by Learn

--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Doctor: <%= @doctor.name %><br>
+<h1>Doctor: <%= @doctor.name %></h1><br>
 <%= @doctor.department %><br>
 <% @doctor.appointments.each do |appt| %>
   <%= appt.datetime %>
