--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,5 +1,5 @@
 <h1>Doctor: <%= @doctor.name %></h1><br>
-<%= @doctor.department %><br>
+<h2><%= @doctor.department %><br></h2>
 <% @doctor.appointments.each do |appt| %>
   <%= appt.datetime %>
   <%= link_to @patient.name, patient_path(patient) %>
