--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,6 +1,7 @@
 <h1>Doctor: <%= @doctor.name %></h1><br>
 <h2><%= @doctor.department %><br></h2>
 <div>
+  <h4>Appointments:</h4>
 <% @doctor.appointments.each do |appt| %>
   <%= appt.datetime %>
   <%= link_to @patient.name, patient_path(patient) %>
