--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -4,5 +4,5 @@
   <h4>Appointments:</h4>
 <% @doctor.appointments.each do |appt| %>
    <p>Date/Time: <%= appt.appointment_datetime.strftime("%B %d, %Y at %H:%M") %></p>
-  <%= link_to @patient.name, patient_path(patient) %>
+  <p>Patient: <%= link_to appt.patient.name, patient_path(appt.patient) %></p>
 <% end %>
