--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -6,3 +6,4 @@
    <p>Date/Time: <%= appt.appointment_datetime.strftime("%B %d, %Y at %H:%M") %></p>
   <p>Patient: <%= link_to appt.patient.name, patient_path(appt.patient) %></p>
 <% end %>
+</div>
