--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,2 +1,3 @@
 <h1>Appointment:</h1>
 <h2>Date/Time: <%= @appointment.appointment_datetime.strftime("%B %d, %Y at %H:%M") %></h2>
+<h3>Doctor: <%= link_to @appointment.doctor.name, doctor_path(@appointment.doctor) %></h3>
